--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
         <link rel="stylesheet" href="css/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -10,42 +12,46 @@
     </head>
     <body>
       <div class="container">
-        <div class="topnav" id="myNav">
-          <ul>
-            <li>
-
-          <img class="logo" src="https://www.boolean.careers/images/misc/logo.png" alt="logo"></li>
-          <li>
-          <a href="#personale">PERSONALE</a></li>
-          <li><a href="#business">BUSINESS</a></li>
-
-          <li><a class="with-dropdown" href="#accounts">Il corso</a>
-            <div class="dropdown-menu account">
+        <div class="topnav">
+          <ul >
+            <li><img class="logo" src="https://cdn.shopify.com/s/files/1/0069/0569/2229/t/38/assets/cbk-logo.png?v=3473966486476688342" alt="logo"></li>
+          </ul>
+          <ul class="sx">
+            <li  class="ssn">
+            <a href="#sfirst">Strike first</a></li>
+            <li  class="ssn"><a href="#shard">Strike Hard</a></li>
+            <li  class="ssn"><a href="#nmercy">No mercy</a></li>
+          </ul>
+          <ul class="dx">
+          <li class="with-dropdown"><a  href="#dojo">Il dojo</a>
+            <div class="dropdown-menu">
               <div class="lista">
                 <ul>
-                  <li>Durata</li>
-                  <li>Full Stack</li>
-                  <li>La classe</li>
-                  <li>Gli insegnanti</li>
+                  <li>I sensei</li>
+                  <li>Gli allievi</li>
+                  <li>I metodi</li>
+                  <li>Gli obiettivi</li>
+                  <li>I risultati</li>
+                  <li>no fighette</li>
                 </ul>
               </div>
             </div>
           </li>
-          <li><a class="with-dropdown" href="#prodotti">Dopo il corso</a>
-            <div class="dropdown-menu prodotti">
+          <li class="with-dropdown"><a  href="#prodotti">Prodotti</a>
+            <div class="dropdown-menu">
               <div class="lista">
                 <ul>
-                  <li>Creazione CV e portfolio</li>
-                  <li>Network di aziende partner</li>
-                  <li>Subito nel mondo del lavoro</li>
-                  <li>Retribuzione</li>
-                  <li>Ex-Studenti</li>
+                  <li>Magliette</li>
+                  <li>Cinture</li>
+                  <li>Kimono</li>
+                  <li>Fasce</li>
+                  <li>Mascherine</li>
                 </ul>
               </div>
             </div>
           </li>
-          <li><a class="with-dropdown" href="#azienda">Azienda</a>
-            <div class="dropdown-menu azienda">
+          <li class="with-dropdown"><a href="#info">Info</a>
+            <div class="dropdown-menu">
               <div class="lista">
                 <ul>
                   <li>Sede</li>
@@ -56,8 +62,8 @@
                 </ul>
               </div>
             </div></li>
-          <li><a class="with-dropdown it" href="#lingua">IT <i class="fas fa-chevron-down show"></i> <i class="hidden fas fa-chevron-up"></i></a>
-            <div class="dropdown-menu it">
+          <li class="with-dropdown it"><a  href="#lingua">IT <i class="fas fa-chevron-down show"></i> <i class="hidden fas fa-chevron-up"></i></a>
+            <div class="dropdown-menu-lingua">
               <div class="lista">
                 <ul>
                   <li>Italiano</li>
@@ -65,6 +71,7 @@
                 </ul>
               </div>
             </div>
+
           </li>
           <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
