--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="dropdown-menu">
               <div class="lista">
                 <ul>
-                  <li>Magliette</li>
+                  <li>T-shirt</li>
                   <li>Cinture</li>
                   <li>Kimono</li>
                   <li>Fasce</li>
@@ -63,7 +63,7 @@
               </div>
             </div></li>
           <li class="with-dropdown it"><a  href="#lingua">IT <i class="fas fa-chevron-down show"></i> <i class="hidden fas fa-chevron-up"></i></a>
-            <div class="dropdown-menu-lingua">
+            <div class="dropdown-menu">
               <div class="lista">
                 <ul>
                   <li>Italiano</li>
