--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </ul>
               </div>
             </div></li>
-          <li class="with-dropdown it"><a  href="#lingua">IT <i class="fas fa-chevron-down show"></i> <i class="hidden fas fa-chevron-up"></i></a>
+          <li class="with-dropdown-freccia it"><a  href="#lingua">IT <i class="fas fa-chevron-down show"></i> <i class="hidden fas fa-chevron-up"></i></a>
             <div class="dropdown-menu">
               <div class="lista">
                 <ul>
