--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&display=swap" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <title>Revolut</title>
     </head>
@@ -81,8 +83,7 @@
           </ul>
         </div>
       </div>
-
-
+      
           <script src="js/script.js"></script>
     </body>
 </html>
