aggiunto footer con marquee

--- a/index.html
+++ b/index.html
@@ -82,8 +82,24 @@
 
           </ul>
         </div>
+        <footer id="maindiv" class="banner">
+          <div id="slogan">
+            <ul>
+              <li>Strike First</li>
+              <li>Strike Hard</li>
+              <li>No Mercy</li>
+            </ul>
+          </div>
+          <div id="sloganR">
+            <ul>
+              <li>Strike First</li>
+              <li>Strike Hard</li>
+              <li>No Mercy</li>
+            </ul>
+          </div>
+        </footer>
       </div>
-      
+
           <script src="js/script.js"></script>
     </body>
 </html>
