--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         <footer id="maindiv" class="banner">
           <div id="slogan">
             <ul>
+              <li><img src="https://i.ebayimg.com/images/g/gYMAAOSwmHdbSSTP/s-l400.jpg" alt="sfshnm"></li>
               <li>Strike First</li>
               <li>Strike Hard</li>
               <li>No Mercy</li>
@@ -92,6 +93,7 @@
           </div>
           <div id="sloganR">
             <ul>
+              <li><img src="https://i.ebayimg.com/images/g/gYMAAOSwmHdbSSTP/s-l400.jpg" alt="sfshnm"></li>
               <li>Strike First</li>
               <li>Strike Hard</li>
               <li>No Mercy</li>
